--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "firebase": "^11.0.1",
     "lodash": "^4.17.21",
     "next": "15.0.1",
